# calamari

./: .travis.yml  Cargo.toml  Justfile  LICENSE  README.md  run-travis-job.sh
examples/: derbit_public.rs  kraken_private.rs  kraken_public.rs  private.rs  public.rs
src/: client.rs  deribit.rs  endpoints.rs  kraken.rs  lib.rs  macros.rs  methods.rs  models.rs  request.rs
