[package]
name = "calamari"
version = "0.1.0"
description = "Minimal, elegant and async REST API client for the Kraken cryptocurrency exchange"
authors = ["Michele Lacchia <michelelacchia@gmail.com>"]
edition = "2018"
license = "ISC"
repository = "https://github.com/rubik/calamari"
keywords = ["kraken", "async", "api", "rest", "cryptocurrency"]
categories = ["api-bindings", "web-programming::http-client"]
readme = "README.md"

[dependencies]
sha2 = "0.9"
hmac = "0.11"
base64 = "0.13"
reqwest = "0.11"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
