[package]
name = "calamari"
version = "0.1.1"
description = "Minimal, elegant and async REST API client for the Kraken cryptocurrency exchange"
documentation = "https://docs.rs/calamari/latest/calamari/"
authors = ["Michele Lacchia <michelelacchia@gmail.com>"]
edition = "2018"
license = "ISC"
repository = "https://github.com/rubik/calamari"
keywords = ["kraken", "async", "api", "rest", "cryptocurrency"]
categories = ["api-bindings", "web-programming::http-client"]
readme = "README.md"

[dependencies]
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
reqwest = "0.12"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
